[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gui/CreateRoom.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/Menu.tscn" type="PackedScene" id=2]

[node name="CreateRoom" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.5
margin_top = 8.0
margin_right = 45.5
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Create room"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 35.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Room name:"

[node name="NameTextEdit" type="TextEdit" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 35 )
hint_tooltip = "Room Name"

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
margin_top = 57.0
margin_right = 300.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Room secret code:"

[node name="RoomCodeTextEdit" type="TextEdit" parent="Control/VBoxContainer"]
margin_top = 75.0
margin_right = 300.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 35 )
hint_tooltip = "Room Name"

[node name="Control" type="Control" parent="Control/VBoxContainer"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 50 )

[node name="CreateRoomBtn" type="Button" parent="Control/VBoxContainer"]
margin_top = 168.0
margin_right = 300.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 40 )
text = "Create"

[node name="CancelBtn" type="Button" parent="Control/VBoxContainer"]
margin_top = 212.0
margin_right = 300.0
margin_bottom = 232.0
text = "Cancel"

[node name="CreatingDialog" type="WindowDialog" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Confirm"

[node name="Label2" type="Label" parent="Control/CreatingDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -37.0
text = "Creating..."
align = 1
valign = 1

[node name="Menu" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Control/VBoxContainer/CreateRoomBtn" to="." method="_on_CreateRoomBtn_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/CancelBtn" to="." method="_on_CancelBtn_pressed"]
